# wizardftp

./: .gitignore  README.md  README.rst  dialog.py  ftp_server.py  pyproject.toml  requirements.txt  setup.py
tests/: test_wizardftp.py
wizardftp/: ftp_client.py  ftp_server.py  utils.py
