[tool.poetry]
name = "wizardftp"
version = "0.1.0"
description = "WizardFTP is PyQT5 based FTP client"
authors = ["Michael Ramsey <mike@hackerdise.me>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.3"
PyQt5-sip = "^12.8.1"
PyQt5-stubs = "^5.15.2"
setuptools = "^53.0.0"
wheel = "^0.36.2"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
